# hh-netbox-plugin

./: .claude-flow.pid  .env_example  .gitignore  .gitignore-additions  .roomodes  128_gpu_test.xlsx  =3.0.0  AGENTS.md  AGENT_13_RETROSPECTIVE.md  AGENT_DEPLOYMENT_VERIFICATION_GUIDE.md  AGENT_GITOPS_FILE_MANAGER.md  AGENT_GITOPS_INTEGRATION_FIX.md  AGENT_GITOPS_SYSTEM_INTEGRATION_TESTER.md  AGENT_GITOPS_TESTING_SPECIALIST.md  AGENT_GITOPS_UI_INTEGRATION.md  AGENT_INITIALIZATION_PROMPTS.md  AGENT_INSTRUCTIONS_ARCHITECTURAL_CLEANUP.md  AGENT_INSTRUCTIONS_GITOPS_WORKFLOW.md  AGENT_INSTRUCTIONS_REALTIME_MONITORING.md  AGENT_ORCHESTRATED_GUI_COMPLETION_STRATEGY.md  AGENT_PERFORMANCE_ANALYSIS_REPORT.md  AGENT_PRODUCTIVITY_MEASUREMENT_SYSTEM.md  AGENT_SECURITY_ENHANCEMENT.md  AGENT_UI_UX_ENHANCEMENT.md  ARCHITECTURAL_CLEANUP_DAILY_REPORT.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_DECISION_NETBOX_CORE_MODELS.md  ARCHITECTURE_REVIEW_AGENT_INSTRUCTIONS.md  ATTEMPT_18_FAILURE_ANALYSIS.md  ATTEMPT_18_INSTRUCTION_ANALYSIS.md  AUTHENTICATION_TESTING_PROTOCOL.md  BACKEND_SYNC_FIXES_COMPLETION_REPORT.md  BULLETPROOF_VALIDATION_COMPLETION_REPORT.md  CIRCULAR_DEPENDENCY_ANALYSIS.md  CLAUDE.md  CLAUDE.old2  CLEANUP_DEMONSTRATION.md  CLEAN_ARCHITECTURE_DESIGN.md  CNCF_PRACTICES_GUIDE.md  (+292 more)
.claude/: CLAUDE.md  CLAUDE_LEGACY.md  config.json  settings.json
.github/: ORCHESTRATION_METHODOLOGY.md
.hive-mind/: config.json  hive.db-shm  hive.db-wal
.swarm/: memory.db-shm
architecture_specifications/: CLAUDE.md  README.md
archive/: BADGE_READABILITY_AUDIT_PLAN.md  BADGE_READABILITY_VERIFICATION_INSTRUCTIONS.md  COMPREHENSIVE_TEST_DESIGN_DELIVERABLE.md  CSS_CLEANUP_PROJECT_SUMMARY.md  DASHBOARD_TEST_DOCUMENTATION.md  DRIFT_DETECTION_IMPLEMENTATION.md  EMERGENCY_ROLLBACK_PROCEDURE.md  FABRIC_EDIT_INVESTIGATION_COMPLETE.md  FABRIC_EDIT_SYNC_FIXES.md  FABRIC_EDIT_TEST_SUMMARY.md  FABRIC_EDIT_USER_GUIDE.md  GITREPOSITORY_TEST_COMMANDS.md  HNP_FABRIC_SYNC_TEST_SUITE_SPECIFICATION.md  NETBOX_DOCKER_RESTORATION_GUIDE.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_REMEDIATION_COMPLETE.md  README.md  RECOVERED_ARCHITECTURAL_DECISIONS.md  RECOVERED_CURRENT_SYSTEM_ARCHITECTURE.md  RECOVERED_GITOPS_ARCHITECTURE_DESIGN.md  RISK_MITIGATION_STRATEGIES.md  SECURITY_FIXES_NEEDED.md  SPECIFICATION_FIELD_FIX_SUMMARY.md  TEMPLATES_NEEDING_CSS.md  TESTING_CHECKLIST.md  git_auth_fix_summary.md  resolution_summary.md
claude_memory/: README.md
(+2574 files in other folders)
